Filtro de busqueda con spinning wheel

--- a/src/pages/krato/krato.scss
+++ b/src/pages/krato/krato.scss
@@ -1,5 +1,4 @@
 .krato-page {
-}
 
 .menu-icon{
 	font-size: 5em !important;
@@ -7,4 +6,11 @@
 
 .button-clear-md,.button-clear-ios{
 	height: 100%
+}
+
+.spinner-container {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+    }
 }
