Links se resaltan si estan selecionados (tabas sectores)

--- a/src/pages/krato/krato.scss
+++ b/src/pages/krato/krato.scss
@@ -1,12 +1,11 @@
-.krato-page {
-
-button > .menu-icon{
+.ion-icon.menu-icon{
 	font-size: 5em !important;
 }
-
 .button-clear-md,.button-clear-ios{
 	height: 100%
 }
+
+.krato-page {
 
 .spinner-container {
         width: 100%;
