--- a/src/pages/krato/krato.scss
+++ b/src/pages/krato/krato.scss
@@ -1,8 +1,18 @@
 .ion-icon.menu-icon{
 	font-size: 4em !important;
 }
+
+.searchbar-md .searchbar-input{
+	border-radius: 50px;
+}
+
+.button-md{
+	border-radius: 100%;
+}
+
 .button-clear-md,.button-clear-ios{
-	height: 100%
+	height: 8.5rem;
+	width: 8.5rem;
 }
 
 .krato-page {
