Algo estoy haciendo mal con el json

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
   <ion-header>
     <ion-toolbar>
-      <ion-title>Pages</ion-title>
+      <ion-title>Paginas</ion-title>
     </ion-toolbar>
   </ion-header>
 
